// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LegacyPlayerEvent can deserialize new state 1`] = `
LegacyPlayerEvent {
  "actionType": "PICK",
  "civilisation": {},
  "executingPlayer": "GUEST",
  "offset": 123,
  "player": "HOST",
}
`;

exports[`LegacyPlayerEvent can deserialize old state 1`] = `
LegacyPlayerEvent {
  "actionType": "PICK",
  "civilisation": {},
  "executingPlayer": "HOST",
  "offset": 123,
  "player": "HOST",
}
`;
